Fix unpleasant 1px gap under navigation header.

--- a/styles.scss
+++ b/styles.scss
@@ -451,7 +451,7 @@ blockquote {
   @media screen and (max-width: $viewport-sm) {
     position: fixed;
     z-index: 1020;
-    top: 55px;
+    top: 54px;
     left: 0;
     right: 0;
 
